[package]
name = "ac-primitives"
version = "0.3.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ['derive'] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# substrate no_std
sp-core = { default-features = false, git = "https://github.com/lakshya-sky/substrate.git", branch = "polkadot-v0.9.34" }
sp-runtime = { default-features = false, git = "https://github.com/lakshya-sky/substrate.git", branch = "polkadot-v0.9.34" }
sp-staking = { default-features = false, git = "https://github.com/lakshya-sky/substrate.git", branch = "polkadot-v0.9.34" }
sp-std = { default-features = false, git = "https://github.com/lakshya-sky/substrate.git", branch = "polkadot-v0.9.34" }
sp-weights = { default-features = false, git = "https://github.com/lakshya-sky/substrate.git", branch = "polkadot-v0.9.34" }

# substrate std / wasm only
frame-system = { optional = true, git = "https://github.com/lakshya-sky/substrate.git", branch = "polkadot-v0.9.34" }
pallet-assets = { optional = true, git = "https://github.com/lakshya-sky/substrate.git", branch = "polkadot-v0.9.34" }
pallet-balances = { optional = true, git = "https://github.com/lakshya-sky/substrate.git", branch = "polkadot-v0.9.34" }
pallet-contracts = { optional = true, git = "https://github.com/lakshya-sky/substrate.git", branch = "polkadot-v0.9.34" }
pallet-staking = { optional = true, git = "https://github.com/lakshya-sky/substrate.git", branch = "polkadot-v0.9.34" }

[dev-dependencies]
node-template-runtime = { git = "https://github.com/lakshya-sky/substrate.git", branch = "polkadot-v0.9.34" }

[features]
default = ["std"]
std = [
    "codec/std",
    "hex/std",
    "scale-info/std",
    "serde/std",
    "serde_json/std",
    # substrate no_std
    "sp-core/std",
    "sp-runtime/std",
    "sp-staking/std",
    "sp-std/std",
    "sp-weights/std",
    # substrate std
    "frame-system",
    "pallet-assets",
    "pallet-balances",
    "pallet-contracts",
    "pallet-staking",
]
